--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "Dartv",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.161",
     "@types/node": "^14.0.14",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
